--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -81,6 +81,17 @@
     </div>
     <p class="result-snippet">{{ paper.summary | slice:0:300 }}...</p>
     <a [href]="paper.pdfLink" class="result-link" target="_blank" rel="noopener noreferrer">Open PDF</a>
+    <!-- Display citation info if available -->
+    <div *ngIf="paper.citationInfo?.citationCount > 0">
+      <p>Number of Citations: <span>{{ paper.citationInfo.citationCount }}</span></p>
+      <p>Citing Papers:</p>
+      <p>
+        <span *ngFor="let url of paper.citationInfo.citationUrls; let i = index">
+          <a [href]="url" target="_blank">{{ i + 1 }}</a>
+          <span *ngIf="i < paper.citationInfo.citationUrls.length - 1">, </span>
+        </span>
+      </p>
+    </div>
   </li>
 </ul>
 
